tests/paczka1/small_fuzzy/86231505.err
Error in line 1: A314 S399 26,0
Error in line 7: OwqlRDpE5R S214 30,7
Error in line 13: OwqlRDpE5R A206 46,3
